# Distributed-WordCount-With-MPI-and-AWS-EC2

./: 1.helloToAnother.c  1.hellotoanother.c  2.pingPong.c  2.pingpong.c  3.circle.c  4.findMax.c  4.findmax.c  5.ringMax.c  5.ringmax.c  CMakeLists.txt  README  README.md
6.wordcount/: CMakeLists.txt  install.sh  library.c  library.h
6.wordcount/include/: fileparser.h  hashmap.h  mpihelper.h  workerhelper.h
6.wordcount/results/: analysisreport_by_process_number_0.txt  analysisreport_by_process_number_1.txt  analysisreport_by_process_number_2.txt  analysisreport_by_process_number_3.txt
6.wordcount/sample/: BStowe-191160.txt  Kirkland-71706.txt  Platone-220979.txt
6.wordcount/src/: fileparser.c  hashmap.c  main.c  mpihelper.c  workerhelper.c
6.wordscount/: Problem_statement.md  README.md
6.wordscount/include/: hashmap.h  workerhelper.h
6.wordscount/sample/: Doran-136667.txt
6.wordscount/src/: workerhelper.c
WordCount/Debug/: WordCount  makefile
WordCount/inc/: fileparser.h  hashmap.h  workerhelper.h
WordCount/sample/: file1.txt  file2.txt  file3.txt
WordCount/src/: fileparser.c  hashmap.c  main.c  workerhelper.c
doc/: README.md
include/: fileparser.h  mpihelper.h
sample/: BStowe-191164.txt  Doran-136667.txt  Kirkland-71706.txt  Machiavelli-52907.txt  Platone-220981.txt  Seneca-116672.txt
src/: fileparser.c  hashmap.c  main.c  mpihelper.c
wordcount/: .cproject  .project  CMakeLists.txt
wordcount/include/: hashmap.h  workerhelper.h
wordcount/sample/: text1.txt  text2.txt  text3.txt  text4.txt
wordcount/src/: fileparser.c  hashmap.c  (+2 more)
(+5 files in other folders)
